--- a/python_intro_part_01.ipynb
+++ b/python_intro_part_01.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -53,16 +53,16 @@
     {
      "data": {
       "text/plain": [
-       "15"
+       "20"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5*3  # int "
+    "5*4  # int "
    ]
   },
   {
@@ -89,7 +89,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8446744073709552e+19"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2.**64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -100,13 +122,13 @@
        "1.6666666666666667"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5/3  # = 1 if you use python 2.7, = 1.666666... if you use python 3.5"
+    "5 / 3  # = 1 if you use python 2.7, = 1.666666... if you use python 3.5"
    ]
   },
   {
@@ -119,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -127,18 +149,54 @@
     {
      "data": {
       "text/plain": [
-       "(3, 5.0)"
+       "list"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = 3 \n",
+    "a12 = 3 \n",
     "b = 5. \n",
-    "a, b"
+    "text='hello'\n",
+    "type(text)\n",
+    "text = 3.14\n",
+    "t = [0,1,2,3,4]\n",
+    "type(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tuples (1,2,3,4,5) are **immutable**,\n",
+    "Lists t=[1,2,3,4] can be altered: t.append(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 9, 9]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "t.append(9)\n",
+    "t"
    ]
   },
   {
@@ -176,7 +234,7 @@
     }
    ],
    "source": [
-    "for i in (0, 1, 2, 3, 4): \n",
+    "for i in (0, 1, 2, 3, 4):\n",
     "    print(i)"
    ]
   },
@@ -200,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -375,7 +433,7 @@
     }
    ],
    "source": [
-    "print('this is a {} with formatting'.format(5))"
+    "print('this is a {} with formatting'.format(5)) # {} is a placeholder"
    ]
   },
   {
@@ -407,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -419,7 +477,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -444,10 +502,14 @@
     {
      "data": {
       "text/plain": [
-       "8.0"
+       "array([[  0.,   0.,   0.],\n",
+       "       [  1.,   1.,   1.],\n",
+       "       [  2.,   4.,   8.],\n",
+       "       [  3.,   9.,  27.],\n",
+       "       [  4.,  16.,  64.]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,8 +518,9 @@
     "for i in range(5): #note: arguments of range are inclusive, exclusive, and step size\n",
     "    a[i, :] = (i, i**2, i**3)  \n",
     "    \n",
-    "a[2]\n",
-    "a[2,2]"
+    "# a[2]\n",
+    "# a[2,2]\n",
+    "a"
    ]
   },
   {
@@ -480,6 +543,28 @@
    ],
    "source": [
     "b.shape # gives us number of rows and columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[0, 1]"
    ]
   },
   {
@@ -536,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -550,7 +635,7 @@
     }
    ],
    "source": [
-    "a = -3\n",
+    "a = -123\n",
     "if a < 0:\n",
     "    print(\"found negative number!\") #note: strings can be enclosed in single or double quotes\n",
     "else:\n",
@@ -559,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -568,12 +653,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "found negative number!\n"
+      "found zero\n"
      ]
     }
    ],
    "source": [
-    "a = -3\n",
+    "a = 0\n",
     "if a < 0:\n",
     "    print(\"found negative number!\")\n",
     "elif a == 0:\n",
@@ -605,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -653,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -662,22 +747,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Called absolute( -7 )\n"
+      "Called absolute( -123 )\n",
+      "123\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "absolute(-7)"
+    "a = absolute(-123)\n",
+    "print(a)"
    ]
   },
   {
@@ -732,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -751,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -762,7 +839,7 @@
        "12"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -794,11 +871,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "13\n"
      ]
     }
    ],
    "source": [
+    "x = 13\n",
     "printMyX()"
    ]
   },
@@ -811,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -820,8 +898,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34\n",
       "17\n",
+      "34\n",
       "12\n"
      ]
     }
@@ -831,9 +909,12 @@
     "def outerFunc():\n",
     "    x = 17 # define variable in \"outer\"'s scope\n",
     "    def innerFunc(): # define a function inside a function\n",
-    "        print(x*2) # accesses outerFunc's x as this is the enclosing scope\n",
-    "    innerFunc()\n",
+    "        return x*2 # accesses outerFunc's x as this is the enclosing scope\n",
+    "    y = innerFunc()\n",
+    "    print(innerFunc())\n",
     "    print(x)\n",
+    "    print(y)\n",
+    "    \n",
     "outerFunc()\n",
     "print(x) # global x should be untouched"
    ]
@@ -845,7 +926,16 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "lhs = absolute(-12)\n",
+    "absolute(absolute(-12))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
