add code of first example

--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -46,12 +46,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The summed area is  1606483\n"
+     ]
+    }
+   ],
+   "source": [
+    "# path to the file on your machine\n",
+    "# WINDOWS USERS: backslashes need to be doubled! C:\\\\Users\\\\mypath\\\\boxes.txt\n",
+    "# f = open('/path/to/file/boxes.txt', 'r') # 'r' means READ mode\n",
+    "f = open('boxes.txt', 'r')\n",
+    "\n",
+    "summedArea = 0 # this variable will accumulate the areas of all boxes\n",
+    "\n",
+    "for line in f: # gives each line independently\n",
+    "    # print(line)\n",
+    "\n",
+    "    # split line at the x'es: '14x12x8'.split('x') -> ['14', '12', '8']\n",
+    "    # unpack each of the 3 values into its own variable w,h and l\n",
+    "    w,h,l = line.split('x')\n",
+    "    # transform ('cast') a string to an integral number \n",
+    "    w = int(w)\n",
+    "    h = int(h)\n",
+    "    l = int(l)\n",
+    "    \n",
+    "    # compute area\n",
+    "    area = 2*l*w + 2*w*h + 2*h*l\n",
+    "    \n",
+    "    # add the area of the smallest side once\n",
+    "    area1 = l*w\n",
+    "    area2 = l*h\n",
+    "    area3 = w*h\n",
+    "    if area1 <= area2 and area1 <= area3:\n",
+    "        area += area1\n",
+    "    elif area2 <= area1 and area2 <= area3:\n",
+    "        area += area2\n",
+    "    else:\n",
+    "        area += area3\n",
+    "    \n",
+    "    # these two lines do the same thing:\n",
+    "    #    summedArea += area \n",
+    "    summedArea = summedArea + area\n",
+    "\n",
+    "print(\"The summed area is \", summedArea)"
+   ]
   },
   {
    "cell_type": "markdown",
