--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -111,10 +111,21 @@
     "\n",
     "For example:\n",
     "\n",
-    "* A present with dimensions 2x3x4 requires 2+2+3+3 = 10 feet of ribbon to wrap the present plus 2*3*4 = 24 feet of ribbon for the bow, for a total of 34 feet.\n",
-    "* A present with dimensions 1x1x10 requires 1+1+1+1 = 4 feet of ribbon to wrap the present plus 1*1*10 = 10 feet of ribbon for the bow, for a total of 14 feet.\n",
+    "* A present with dimensions 2x3x4 requires 2+2+3+3 = 10 feet of ribbon to wrap the present plus $2*3*4 = 24$ feet of ribbon for the bow, for a total of 34 feet.\n",
+    "* A present with dimensions 1x1x10 requires 1+1+1+1 = 4 feet of ribbon to wrap the present plus $1*1*10 = 10$ feet of ribbon for the bow, for a total of 14 feet.\n",
     "\n",
     "How many total feet of ribbon should they order?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "expectedResult = 3842356"
    ]
   },
   {
