add comment on np.dot vs multiplication sign

--- a/python_intro_part_02_convolution-solution.ipynb
+++ b/python_intro_part_02_convolution-solution.ipynb
@@ -851,6 +851,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```np.dot``` of two matrices performs matrix multiplication, but we want the element wise multiplication and the sum, so use np.sum(a*b)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
