--- a/day1-recap.ipynb
+++ b/day1-recap.ipynb
@@ -281,6 +281,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-24-10e627d7d194>, line 15)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-10e627d7d194>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    power(exp=3, 2)\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NEW: a function with a default argument:\n",
+    "def power(x, exp=2):\n",
+    "    return x**exp # = x ^ exp\n",
+    "\n",
+    "print(power(2)) # using default argument\n",
+    "print(power(2,4)) # specify exponent on our own\n",
+    "print(power(x=2, exp=5)) # adress parameters by name (called \"keyword argument\")\n",
+    "print(power(exp=5, x=2)) # when parameters are adressed by name, you can switch the order\n",
+    "\n",
+    "# when only giving the names of some parameters, \n",
+    "# the ones without names need to go in front in the proper order!\n",
+    "print(power(2, exp=3))\n",
+    "\n",
+    "# this will not work:\n",
+    "power(exp=3, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variable types\n",
+    "We've not mentioned two things yesterday:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# boolean types can represent truth values\n",
+    "y = True\n",
+    "n = False\n",
+    "print(y and y) # True and True -> True\n",
+    "print(y and n) # True and False -> False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# conditions return boolean values!\n",
+    "x = 0\n",
+    "conditionResult = x == 0\n",
+    "print(conditionResult)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# default value meaning \"there is no proper value for this variable yet\"\n",
+    "a = None\n",
+    "\n",
+    "# comparisons with None always return False\n",
+    "print(a == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is none!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check whether a variable is None:\n",
+    "if a is None:\n",
+    "    print('Is none!')\n",
+    "else:\n",
+    "    print('Not none')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
