update recap and convolution V2

--- a/python_intro_part_02_convolution-update.ipynb
+++ b/python_intro_part_02_convolution-update.ipynb
@@ -39,6 +39,28 @@
     "* Implememt a function for 1D circular convolution that accepts two sequences $f, g$ of as input, where $f$ can be shorter, same length, or longer than $g$. \n",
     "* Try and make your function robust to wrong / illegal input. You get full credit if Carsten or Fred can't break it :-) "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Integrating the heat equation over time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look up the heat equation. \n",
+    "Load this file (Carsten, link up please) using `numpy.load`. Plot the numpy array it contains. \n",
+    "* Integrate the heat equation over time, using the array as starting temperature, and homogeneous temperature diffusivity. To compute the curvature in 2D, convolve with \n",
+    "```\n",
+    "    np.array([[0, 1, 0], [1, -4, 1], [0, 1, 0]])\n",
+    "```\n",
+    "Plot the evolution over time. \n",
+    "* Integrate the heat equation over time, assuming that the nonzero parts of your initial array are coupled to an infinite heat bath of the respective temperature. \n",
+    "Plot the evolution over time. Do you reach a steady state? \n"
+   ]
   }
  ],
  "metadata": {
