--- a/python_intro_part_02_convolution-update.ipynb
+++ b/python_intro_part_02_convolution-update.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "source": [
     "Look up the heat equation. \n",
-    "Load this file (Carsten, link up please) using `numpy.load`. Plot the numpy array it contains. \n",
+    "Load this <a href='https://github.com/chaubold/pycourse2016/raw/master/bc.npy'>file</a> using `numpy.load`. Plot the numpy array it contains. \n",
     "* Integrate the heat equation over time, using the array as starting temperature, and homogeneous temperature diffusivity. To compute the curvature in 2D, convolve with \n",
     "```\n",
     "    np.array([[0, 1, 0], [1, -4, 1], [0, 1, 0]])\n",
